--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Portfolio</title>
-</head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/portfolio.css">
+
 <body>
     <header>
-
+<nav>
+    <h3 class="nav-title">Ma<span class="pm-text">r</span>y</h3>
+    <ul>
+        <li><a href=""></a>Portfolio</li>
+        <li><a href=""></a>Blog</li>
+        <li><button class="btn-pm">Hire Me</button></li>
+    </ul>
+</nav>
     </header>
 
     <main>
