--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <h3 class="section-title">What I do</h3>
     <p id="what-i-do-des" class="section-dis">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 </section>
+<section>
 <div class="skills-container">
 
     <div class="skill">
@@ -86,6 +87,7 @@
         <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
     </div>
 </div>
+</section>
     </main>
 
     <footer>
