--- a/index.html
+++ b/index.html
@@ -170,8 +170,13 @@
         </div>
     </div>
     <div class="footer-colum">
-        <h3 class="section-title">Let’s Message me</h3>
-
+        <h3 class="section-title">Lets Message me</h3>
+        <form class="contact" action="">
+            <input type="text" placeholder="Your Name">
+            <input type="email" name="" id="" placeholder="Your Email">
+            <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+            <button class="btn-pm" type="submit">Submit</button>
+        </form>
     </div>
 
     </footer>
